<resources>
    <string name="app_name">BDV Digital</string>

    <string-array name="servicos">
        <item>Rota passageiros</item>
        <item>Atendimento patio</item>
        <item>Abastecimento</item>
        <item>Rota motorista</item>
    </string-array>

    <string-array name="check_itens">
        <item>Carroceria - Estado em geral</item>
        <item>Placas fixadas, legíveis e com lacre</item>
        <item>Limpadores de para-brisa em funcionamento</item>
        <item>Água no reservatório para limpeza do para-brisa</item>
        <item>Farol alto e baixo em perfeita condições</item>
        <item>Luzes de posição (lanternas)</item>
        <item>Luz de freio e luz suplementar de freio - Brake-Light</item>
        <item>Nível de combustível</item>
        <item>Luz de marcha ré</item>
        <item>Luzes de direção (setas) e do pisca alerta funcionando</item>
        <item>Espelhos retrovisores</item>
        <item>Pneus dianteiros, traseiros e estepe em bom estado de conservação</item>
        <item>Objetos/bagagens bem acondicionadas/afixadas</item>
        <item>Poltronas em bom estado</item>
        <item>Cinto de segurança do tipo três pontos para todos ocupantes do veículo</item>
        <item>Portas e janelas em bom estado e em funcionamento</item>
        <item>Nível do óleo</item>
        <item>Extintor de incêndio com carga de pó ABC</item>
        <item>Macaco, cahve de roda, triângulo</item>
        <item>Giroflex</item>
        <item>Velocímetro em funcionamento</item>
        <item>Freio de estacionamento em condição de uso</item>
        <item>Possui grade de proteção do vidro traseiro (para veículos de carga)</item>
        <item>Existência de 2 coletes refletivos para utilização em caso de emergência</item>
        <item>Documentação do veículo e condutor em dia</item>
        <item>Cartão de abastecimento (Good Card)</item>
        <item>Buzina em funcionamento</item>
        <item>Encosto de cabeção para todos os ocupantes </item>
        <item>Amortecedores da tampa traseira (bagageiro) em bom estado</item>

    </string-array>


    <string name="config_pagina_titulo">Configuração Veículo</string>
    <string name="info_veiculo">Informações do veículo deste dispositivo</string>
    <string name="veiculo_cartela_config">Frota</string>
    <string name="veiculo_modelo_config">Modelo</string>
    <string name="veiculo_placa_config">Placa</string>
    <string name="veiculo_cc_config">Centro de custo</string>
    <string name="info_veiculo_senha_config">Senha do administrador</string>
    <string name="veiculo_senha_config">Senha</string>
    <string name="checklist_completed">Checklist realizado com sucesso!</string>
    <string name="checklist_error">Erro ao realizar checklist!</string>
    <string name="campo_obrigatorio">Preencha este campo antes de continuar!</string>
    <string name="btnIniciaBdv">INICIAR ROTA</string>
    <string name="btnFimBdv">FINALIZAR ROTA</string>
    <string name="btnAddAssinatura">ADICIONAR ASSINATURA</string>
    <string name="btnAtualizaBDVs">SINCRONIZAR DADOS</string>
    <string name="msg_lista_ass_vazia">É necessário pelo menos uma assinatura para fechar a rota.</string>
    <string name="btn_ok">OK</string>
    <string name="btn_logar">ENTRAR</string>
    <string name="btn_atualizar_motoristas">ATUALIZAR MOTORISTAS</string>
    <string name="msg_avalicao_necessaria">Avalie o serviço de transporte.</string>
    <string name="msg_avaliacao_realizada">Avaliação realizada com sucesso!</string>
    <string name="msg_inicie_rota">É necessario iniciar uma rota para realizar assinaturas.</string>
    <string name="msg_sem_bdv_dessincronizado">Todos registros já estão sincronzados.</string>
    <string name="msg_bdvs_sincronizados">Registros sincronizados com sucesso!</string>
    <string name="msg_bdv_cadastrado">BDV cadastrado com sucesso!</string>
    <string name="msg_kmfina_maior_kminicial">Km final deve ser maior que o inicial!</string>
    <string name="msg_inisira_km_final">Insira o Km final antes de finalizar a rota!</string>
    <string name="msg_botao_voltar">Pressione mais uma vez para sair.</string>
    <string name="titulo_rodovia">Rodovia</string>
    <string name="msg_erro_conexao_servidor">Erro ao se conectar ao servidor!</string>
    <string name="msg_erro_gravar_dados">Erro ao registrar dados.</string>
    <string name="msg_erro_ler_dados">Erro ao ler dados.</string>
    <string name="titulo_observacoes">Observações</string>
    <string name="titulo_check_list">Lista de Itens</string>
    <string name="titulo_pagina_custo_motorista">Custos Diários</string>
    <string name="titulo_descricao_custo">Descrição</string>
    <string name="titulo_valor_custo">Valor</string>
    <string name="btn_adicionar_custo">Registrar Custo Diário</string>
    <string name="btn_logout">SAIR</string>
    <string name="msg_custo_cadastrado">Custo diário cadastrado com sucesso.</string>
    <string name="erro_logout">Erro ao efetuar logout.</string>
    <string name="info_todos_dados_sync">Todos os dados estão sincronizados.</string>
    <string name="info_dados_nao_sync">Existem dados que ainda não foram sincronizados.</string>
    <string name="erro_nome_wifi">É necessário estar conectado a rede V-DATA para sincronização dos dados.</string>
    <string name="msg_finalize_rota">Finalize a rota antes de realizar esta operação.</string>
    <string name="erro_senha_diferente">Senhas não conferem!</string>
    <string name="msg_ativa_gps">Ligue o GPS antes de iniciar a rota.</string>

    <string name="WIFI_NAME">\"Pimentel\"</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
