<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp"
    tools:context="com.car.vale.bdvdigital.veiculoConfig">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/pctName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/config_pagina_titulo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:id="@+id/spacer2"
        android:layout_below="@+id/card_view"/>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spacer2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spacer"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:hint="Receita"
                android:theme="@style/Theme.AppCompat.Light">

                <TextView
                    android:id="@+id/textRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_veiculo"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/veiculo_cartela_config"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtConfigCartela"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout1"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/veiculo_modelo_config"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtConfigModelo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout2"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/veiculo_placa_config"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtConfigPlaca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout3"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/veiculo_cc_config"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtConfigCC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spacer"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:hint="Receita"
                android:theme="@style/Theme.AppCompat.Light">

                <TextView
                    android:id="@+id/textRecipe5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_veiculo_senha_config"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout4"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/veiculo_senha_config"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtSenhaConfig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>



        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:id="@+id/spacer3"
        android:layout_below="@+id/card_view3"/>

    <Button
        android:id="@+id/btnConfigVeiculo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@+id/spacer3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp"
        android:background="@color/blueAccent"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/white"
        android:text="@string/btn_ok" />


</RelativeLayout>

