<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp"
    tools:context="com.car.vale.bdvdigital.cadastroCustoMotorista">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spacer"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:theme="@style/Theme.AppCompat.Light">

                <TextView
                    android:id="@+id/textRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_pagina_custo_motorista"
                    android:textSize="20dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/titulo_descricao_custo"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtDescricaoCustoMotorista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextLayout1"
                android:layout_marginTop="30dp"
                android:focusableInTouchMode="true"
                android:hint="@string/titulo_valor_custo"
                android:theme="@style/Theme.AppCompat.Light">

                <EditText
                    android:id="@+id/edtValorCustoMotorista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/nameTextLayout2">
                <CalendarView
                    android:id="@+id/clndCustoMotorista"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.8"/>

                <Button
                    android:id="@+id/btnOKCustoMotorista"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_weight="0.2"
                    android:layout_marginTop="15dp"
                    android:background="@color/blueAccent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    android:text="@string/btn_ok" />
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>

